Overflow on log message bug

--- a/public/style.css
+++ b/public/style.css
@@ -76,3 +76,11 @@ h1,h2,h3,h4 {
 .yellow {
     color: yellow;
 }
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
